# delta-explain

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  VISION.md  create_test_table.py
.github/workflows/: ci.yml  docker.yml  release.yml
src/: main.rs  predicate.rs  predicate_analyzer.rs  predicate_parser.rs  report.rs  stats.rs
test-table-flat/: part-00004.snappy.parquet
test-table/country=DE/: part-00000-a35083c1-e353-4350-b1ef-4d9081b14d9c-c000.snappy.parquet
test-table/country=IT/: part-00000-48368dae-45cf-48b0-9ed3-942f0aecf8ed-c000.snappy.parquet  part-00000-fcf95aac-30bd-4140-8bd1-3aa7ebacd9fb-c000.snappy.parquet
test-table/country=US/: part-00000-de2ffaef-d085-4a21-855e-e45bc774dad4-c000.snappy.parquet  part-00000-eee5a3ec-bcf0-44c2-adfa-88c4cbdf2e0a-c000.snappy.parquet
tests/: cli.rs  partition_columns.rs
